<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>es.udc.gac</groupId>
	<artifactId>smusket</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>SMusket</name>
	<url>https://github.com/rreye/smusket</url>
        <licenses>
                <license>
                <name>GNU General Public Licence Version 3</name>
                <url>https://www.gnu.org/licenses/gpl.txt</url>
                </license>
        </licenses>
	<properties>
                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <hadoop-sequence-parser.version>1.0</hadoop-sequence-parser.version>
                <spark.version>2.0.0</spark.version>
		<commons-lang3.version>3.8.1</commons-lang3.version>
		<log4j2.version>2.13.3</log4j2.version>
                <maven.compiler.version>3.8.0</maven.compiler.version>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <maven.assembly.version>3.1.0</maven.assembly.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>es.udc.gac</groupId>
			<artifactId>hadoop-sequence-parser</artifactId>
			<version>${hadoop-sequence-parser.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_2.11</artifactId>
			<version>${spark.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql_2.11</artifactId>
			<version>${spark.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency> 
			<groupId>org.apache.logging.log4j</groupId> 
			<artifactId>log4j-api</artifactId> 
			<version>${log4j2.version}</version> 
		</dependency> 
		<dependency> 
			<groupId>org.apache.logging.log4j</groupId> 
			<artifactId>log4j-core</artifactId> 
			<version>${log4j2.version}</version> 
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven.assembly.version}</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<finalName>${project.artifactId}-bin</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<attach>false</attach>
					<archive>
						<manifest>
							<mainClass>es.udc.gac.smusket.RunMerge</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
